--- a/jnote/LM_Test.ipynb
+++ b/jnote/LM_Test.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -433,68 +433,14 @@
       "Instructions for updating:\n",
       "Colocations handled automatically by placer.\n",
       "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/5r/zhr6xl0j4hlgsj6383x59_g40000gn/T/tmpgr4nhry6\n",
-      "INFO:tensorflow:Using config: {'_model_dir': '/var/folders/5r/zhr6xl0j4hlgsj6383x59_g40000gn/T/tmpgr4nhry6', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/5r/zhr6xl0j4hlgsj6383x59_g40000gn/T/tmp6l6qg7c4\n",
+      "INFO:tensorflow:Using config: {'_model_dir': '/var/folders/5r/zhr6xl0j4hlgsj6383x59_g40000gn/T/tmp6l6qg7c4', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
       "graph_options {\n",
       "  rewrite_options {\n",
       "    meta_optimizer_iterations: ONE\n",
       "  }\n",
       "}\n",
-      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1c44988d30>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
-      "WARNING:tensorflow:From /Users/jerrik/a3/envs/tf1.13/lib/python3.7/site-packages/tensorflow/python/data/ops/dataset_ops.py:429: py_func (from tensorflow.python.ops.script_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "tf.py_func is deprecated in TF V2. Instead, use\n",
-      "    tf.py_function, which takes a python function which manipulates tf eager\n",
-      "    tensors instead of numpy arrays. It's easy to convert a tf eager tensor to\n",
-      "    an ndarray (just call tensor.numpy()) but having access to eager tensors\n",
-      "    means `tf.py_function`s can use accelerators such as GPUs as well as\n",
-      "    being differentiable using a gradient tape.\n",
-      "    \n",
-      "INFO:tensorflow:Calling model_fn.\n",
-      "WARNING:tensorflow:From ../LM/model.py:64: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.dropout instead.\n",
-      "WARNING:tensorflow:From /Users/jerrik/a3/envs/tf1.13/lib/python3.7/site-packages/tensorflow/python/keras/layers/core.py:143: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
-      "WARNING:tensorflow:From ../LM/model.py:176: BasicLSTMCell.__init__ (from tensorflow.python.ops.rnn_cell_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "This class is equivalent as tf.keras.layers.LSTMCell, and will be replaced by that in Tensorflow 2.0.\n",
-      "WARNING:tensorflow:From ../LM/model.py:180: bidirectional_dynamic_rnn (from tensorflow.python.ops.rnn) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `keras.layers.Bidirectional(keras.layers.RNN(cell))`, which is equivalent to this API\n",
-      "WARNING:tensorflow:From /Users/jerrik/a3/envs/tf1.13/lib/python3.7/site-packages/tensorflow/python/ops/rnn.py:443: dynamic_rnn (from tensorflow.python.ops.rnn) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `keras.layers.RNN(cell)`, which is equivalent to this API\n",
-      "WARNING:tensorflow:From /Users/jerrik/a3/envs/tf1.13/lib/python3.7/site-packages/tensorflow/python/ops/rnn.py:626: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
-      "WARNING:tensorflow:From ../LM/model.py:152: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.dense instead.\n",
-      "WARNING:tensorflow:From ../LM/utils/TfUtils.py:44: calling reduce_sum_v1 (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n",
-      "WARNING:tensorflow:From ../LM/utils/TfUtils.py:45: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
-      "============================================================\n",
-      "total reg parameter count: 0.062 M\n",
-      "excluded variables from regularization\n",
-      "['embedding/Embedding:0', 'biLSTM/birnn/fw/basic_lstm_cell/bias:0', 'biLSTM/birnn/bw/basic_lstm_cell/bias:0', 'dense-fwd/bias:0', 'dense-bwd/bias:0']\n",
-      "============================================================\n",
-      "regularized variables\n",
-      "['biLSTM/birnn/fw/basic_lstm_cell/kernel:0:0.025M', 'biLSTM/birnn/bw/basic_lstm_cell/kernel:0:0.025M', 'dense-fwd/kernel:0:0.002M', 'dense-bwd/kernel:0:0.002M', 'fwddigit_bias:0:0.004M', 'bwddigit_bias:0:0.004M']\n",
-      "============================================================\n",
-      "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Create CheckpointSaverHook.\n",
-      "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Running local_init_op.\n",
-      "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Saving checkpoints for 0 into /var/folders/5r/zhr6xl0j4hlgsj6383x59_g40000gn/T/tmpgr4nhry6/model.ckpt.\n",
-      "INFO:tensorflow:loss = 16.65451, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 0.742517\n",
-      "INFO:tensorflow:loss = 16.301603, step = 101 (134.686 sec)\n"
+      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1c44e65a90>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n"
      ]
     }
    ],
@@ -503,7 +449,7 @@
     "my_model = model(config)\n",
     "\n",
     "est_model = tf.estimator.Estimator(model_fn=my_model, params={})\n",
-    "est_model.train(input_fn=ds_fn)"
+    "# est_model.train(input_fn=ds_fn)"
    ]
   },
   {
