--- a/jnote/LM_Test.ipynb
+++ b/jnote/LM_Test.ipynb
@@ -449,7 +449,7 @@
     "my_model = model(config)\n",
     "\n",
     "est_model = tf.estimator.Estimator(model_fn=my_model, params={})\n",
-    "# est_model.train(input_fn=ds_fn)"
+    "est_model.train(input_fn=ds_fn)"
    ]
   },
   {
