--- a/jnote/LM_Test.ipynb
+++ b/jnote/LM_Test.ipynb
@@ -504,10 +504,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "403.4287934927351\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "-np.log(1/19853)*2\n",
+    "print(np.exp(6))"
+   ]
   },
   {
    "cell_type": "code",
