--- a/jnote/LM_Test.ipynb
+++ b/jnote/LM_Test.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -200,15 +200,14 @@
      "output_type": "stream",
      "text": [
       "shuffle\n",
-      "[1 2 9]\n",
-      "[7 8 3]\n",
-      "[ 4  6 10]\n",
-      "[5]\n",
+      "[1 2 4]\n",
+      "[3 6 7]\n",
+      "[8 9 5]\n",
       "shuffle\n",
-      "[3 1 4]\n",
-      "[10  8  2]\n",
-      "[6 5 9]\n",
-      "[7]\n"
+      "[10  1  3]\n",
+      "[2 5 6]\n",
+      "[4 7 8]\n",
+      "[ 9 10]\n"
      ]
     }
    ],
@@ -220,12 +219,13 @@
     "aa = [o for o in range(10)]\n",
     "def gen(x):\n",
     "    print('shuffle')\n",
-    "    np.random.shuffle(x)\n",
+    "#     np.random.shuffle(x)\n",
     "    for i in x:\n",
     "        yield i\n",
     "def gendata():\n",
     "    ds = tf.data.TextLineDataset.from_generator(lambda: gen(aa), \n",
     "                                                (tf.int32), (tf.TensorShape([])))\n",
+    "    ds = ds.shuffle(2)\n",
     "    ds = ds.batch(3).repeat(2)\n",
     "    return ds\n",
     "\n",
@@ -250,23 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shuffle\n",
-      "[9.3 8.3 3.3]\n",
-      "[10.3  4.3  5.3]\n",
-      "[ 2.3 11.3  7.3]\n",
-      "[6.3]\n",
-      "shuffle\n",
-      "[ 2.3  7.3 10.3]\n",
-      "[ 9.3  3.3 11.3]\n",
-      "[6.3 5.3 8.3]\n",
-      "[4.3]\n"
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow' has no attribute 'function'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-c0dec4b03599>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;34m@\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgendata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'function'"
      ]
     }
    ],
@@ -504,21 +499,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "81.45086866496814\n"
+      "49.40244910553017\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "-np.log(1/19853)*2\n",
-    "print(np.exp(4.4))"
+    "print(np.exp(3.9))"
    ]
   },
   {
