--- a/jnote/LM_Test.ipynb
+++ b/jnote/LM_Test.ipynb
@@ -613,61 +613,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "49.40244910553017\n"
+      "WARNING:tensorflow:From <ipython-input-122-c6f606513e80>:11: calling reduce_logsumexp_v1 (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
+      "[[0.6931472  0.6931472 ]\n",
+      " [0.47505164 0.36533368]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "-np.log(1/19853)*2\n",
-    "print(np.exp(3.9))"
+    "import tensorflow as tf\n",
+    "\n",
+    "def entropy_from_logits(p_logits):\n",
+    "    '''\n",
+    "    Args\n",
+    "    params p: shape(b_sz, xlen, class)\n",
+    "    '''\n",
+    "    logp = p_logits - tf.math.reduce_logsumexp(p_logits, \n",
+    "                                               axis=-1, \n",
+    "                                               keep_dims=True)  # shape(b_sz, xlen, class)\n",
+    "    p = tf.nn.softmax(p_logits, axis=-1)    # shape(b_sz, xlen, class)\n",
+    "    entro = tf.reduce_sum(-p*logp, axis=-1)            # shape(b_sz, xlen)\n",
+    "    return entro\n",
+    "plog = tf.constant([[[0, 0], [0, 0]], [[1, 2.5], [2, 4]]], dtype=tf.float32)\n",
+    "ent = entropy_logits(plog)\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(ent))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.47505156369228696\n",
+      "-0.3653338550872076\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = np.exp(1.)/(np.exp(1.) + np.exp(2.5))\n",
+    "p2 = np.exp(2.5)/(np.exp(1.) + np.exp(2.5))\n",
+    "print(p1*np.log(p1) + p2*np.log(p2))\n",
+    "p1 = np.exp(2.)/(np.exp(2.) + np.exp(4.))\n",
+    "p2 = np.exp(4.)/(np.exp(2.) + np.exp(4.))\n",
+    "print(p1*np.log(p1) + p2*np.log(p2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "384"
+       "9058"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "256+128"
+    "27176//3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7286"
+       "0.4735488656416021"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "27176//3 *4* 256 // 1273"
+    "0.98**37"
    ]
   },
   {
